# aetnamem

./: .gitignore  MANIFEST.in  README.md  TODO.md  plan.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  publish.yml
aetnamem/: __init__.py  cli.py  graph.py  investigate.py  maintenance.py  memory.py
aetnamem/actions/: __init__.py  approval.py  authority.py  engine.py  models.py  policy.py  store.py  verifier.py
aetnamem/assistant/: __init__.py  agent.py  providers.py
aetnamem/broker/: __init__.py  broker.py
aetnamem/core/: __init__.py  canonical.py  policy.py
aetnamem/decisions/: __init__.py  bridge.py  consensus.py  engine.py  models.py  postgres.py  repository.py  signing.py  store.py  verify.py
aetnamem/etd/: __init__.py  playground.py  profiles.py  report.py
aetnamem/extract/: __init__.py  rules.py
aetnamem/mcp/: __init__.py  gate.py  server.py
aetnamem/retrieve/: __init__.py  rank.py
aetnamem/runtime/: __init__.py  compiler.py  config.py  interventions.py  models.py  orchestrator.py  store.py  wizard.py
aetnamem/semantic/: __init__.py  index.py  providers.py
aetnamem/service/: __init__.py  __main__.py  app.py  encrypted_db.py  secrets.py  ui.py
aetnamem/store/: __init__.py  sqlite.py
bench/: README.md  compare_tencentdb.sh  graph_recall.py
bench/adapters/: aetnamem.py
bench/four_memory/: README.md  run_benchmark.py
bench/openclaw_memory/: README.md  cases.json  run_benchmark.py  run_cache_benchmark.py
bench/semantic_search/: README.md  golden.json  run.py
bench/targets/: aetnamem.yaml
docs/: audit-log-spec.md  audit-search.md  auditing-guide.md  capabilities.json  channels-outbound-spec.md  current-status.md  data-storage-and-backup.md  decision-host-integration.md  decision-workflow-spec.md  etd-pilot-methodology-review.md  etd-profile.md  four-memory-runtime.md  graph-memory-design.md  grok-xai.md  guarded-actions.md  hermes-agent.md  inference-engineering-spec.md  integration-guide.md  launch-article.md  macos-desktop.md  openclaw-memory-evaluation.md  openclaw-setup.md  semantic-search.md  tencentdb-comparison.md  x-launch-post.md
docs/marketing/: x-etd-release.md  x-four-memory-release.md
docs/releases/: v0.4.0.md  v0.4.0a1.md  v0.4.1.md  v0.5.0.md  v0.5.1.md
examples/: generic_context_pack.py  grok_tool_playground.py
examples/etd-playground/: README.md  pilot-config.example.json
examples/flagship-demo/: README.md  broker_demo.py  run.sh
examples/grok-memory-game/: README.md  game.py  transcript.md
integrations/openclaw/: README.md  index.ts  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json
paper/: Makefile  README.md  aetnamem-x-articles.tex  governed-memory-references.bib  governed-memory.tex  main.tex  references.bib
paper/data/: GOVERNED_MEMORY_PROVENANCE.md  PROVENANCE.md  auditability.csv  benchmark-results.csv  demo-metrics.json  governed-memory-probe.json  recall-forensics.json  reproduction.json
paper/figures/: architecture.tex  (+7 more)
tests/: _fake_mcp_upstream.py  test_actions.py  test_assistant.py  test_auditability.py  test_broker.py  test_broker_demo.py  test_cli.py  test_decision_bridge.py  test_decision_concurrency.py  test_decision_postgres.py  test_decision_signing_retention.py  test_decisions.py  test_documentation.py  test_encrypted_db.py  test_extract.py  test_graph.py  test_host_adapter.py  test_journal_import.py  test_layers.py  test_maintenance.py  test_mcp.py  test_mcp_gate.py  test_memory.py  test_openclaw_benchmark.py  test_policy.py  test_providers.py  test_recall_evidence.py  test_retrieve.py  test_runtime.py  test_semantic_search.py  test_service.py  test_store_transactions.py
tools/: render_openclaw_aetnamem_video.py  smoke_installed_package.py  verify_actions.py  verify_audit.py
(+68 files in other folders)
