[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aetnamem"
version = "0.4.0"
description = "Auditable memory engine for agents."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
authors = [{ name = "aetna000", email = "aetna000@gmail.com" }]
maintainers = [{ name = "aetna000", email = "aetna000@gmail.com" }]
keywords = ["agent-memory", "audit", "mcp", "provenance", "sqlite"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "cryptography>=42.0.0,<49.0.0",
  "psycopg[binary]>=3.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
aetnamem = "aetnamem.cli:main"
aetnamem-service = "aetnamem.service.__main__:main"
aetnamem-etd-playground = "aetnamem.etd.playground:main"
aetnamem-etd-verify = "aetnamem.decisions.verify:main"

[project.urls]
Homepage = "https://github.com/aetna000/aetnamem"
Repository = "https://github.com/aetna000/aetnamem"
Issues = "https://github.com/aetna000/aetnamem/issues"
Documentation = "https://github.com/aetna000/aetnamem#readme"

[tool.setuptools.packages.find]
include = ["aetnamem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
